<resources>
    <string name="app_name">Moodtracker</string>

    <!-- Mood_view -->
    <string name="history_button">history_button</string>
    <string name="mood_image">mood_image</string>
    <string name="add_mood_button">add_mood_button</string>

    <!-- History_view -->
    <string name="d_7">Il y a une semaine</string>
    <string name="d_6">Il y a 6 jours</string>
    <string name="d_5">Il y a 5 jours</string>
    <string name="d_4">Il y a 4 jours</string>
    <string name="d_3">Il y a 3 jours</string>
    <string name="d_2">Avant-hier</string>
    <string name="d_1">Hier</string>
    <string name="email_button">email_button</string>

</resources>
